// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Auth view - handles auth default behaviour renders without error 1`] = `
<div>
  <main />
</div>
`;

exports[`Auth view - handles auth when a navigate value is passed renders without error 1`] = `
<div>
  <span
    data-mock="Navigate"
    data-testid="mock-navigate"
    replace="true"
    to="/mockPath"
  >
    Mock Navigate
  </span>
</div>
`;

exports[`Auth view - handles auth when an auth error occurs renders without error 1`] = `
<div>
  <span
    data-mock="Navigate"
    data-testid="mock-navigate"
    replace="true"
    to="/mockErrorPath"
  >
    Mock Navigate
  </span>
</div>
`;
